--- a/about.html
+++ b/about.html
@@ -5,19 +5,19 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>About Us | Baytown Community Hub</title>
 
-		<!-- Main stylesheet for the site -->
+		<!-- link to css -->
 		<link rel="stylesheet" href="style.css">
 	</head>
 
 	<body>
 
-		<!-- Navigation bar used on all pages -->
+		<!-- nav bar (included on all pages) -->
 		<nav class="navbar">
 			<div class="nav-container">
 
-				<!-- Clicking this takes you back to the home page -->
+				
 				<a href="index.html" class="logo">
-					Baytown Hub
+					Baytown Community Hub
 				</a>
 
 				<ul class="nav-links">
@@ -26,22 +26,23 @@
 					<li><a href="highlights.html">Highlights</a></li>
 					<li><a href="submit.html">Submit Resource</a></li>
 					<li><a href="about.html" class="active">About</a></li>
+                     <li><a href="references.html">References</a></li>
 				</ul>
 
 			</div>
 		</nav>
 
-		<!-- Page title section -->
+		
 		<header class="page-header">
 			<h1>About Baytown Community Hub</h1>
 			<p>
-				Helping connect Baytown residents with reliable local resources
+				Helping connect Baytown residents with trustworthy local resources
 			</p>
 		</header>
 
 		<main>
 
-			<!-- Explains what this site is actually for -->
+			<!-- mission section -->
 			<section class="section">
 				<div class="two-column">
 
@@ -49,21 +50,18 @@
 						<h2>Our Mission</h2>
 						<p class="lead">
 							To connect Baytown residents with resources and services that can
-							help them.
+							assist them.
 						</p>
 
 						<p>
-							We noticed that a lot of community information was hard to find or
-							spread across different websites.
-						</p>
+							We have noticed that most community information was diffivult to find and spread out across various websites.
 
 						<p>
-							This website puts everything in one place so people don’t have to
-							search for a long time.
+							This hub puts everything in one place for our community's convenience so people don't have to scour for community resources
 						</p>
 					</div>
 
-					<!-- Simple list of goals for the project -->
+					<!-- goals section -->
 					<div class="card">
 						<h3>Our Goals</h3>
 						<ul>
@@ -88,14 +86,14 @@
 					<div class="card">
 						<h3>The Problem</h3>
 						<p>
-							People don’t always know where to go when they need help.
+							People don’t always know where to go when they need help in their community.
 						</p>
 					</div>
 
 					<div class="card">
 						<h3>The Solution</h3>
 						<p>
-							One website that organizes local resources in a clear way.
+							One website that organizes local resources in a clear and accessible way.
 						</p>
 					</div>
 
@@ -109,7 +107,7 @@
 				</div>
 			</section>
 
-			<!-- Overview of how users would actually use the site -->
+			<!-- how to use the site -->
 			<section class="section">
 				<h2>How the Hub Works</h2>
 				<p class="subtitle">
@@ -160,7 +158,7 @@
 					<div class="card">
 						<h3>Share Feedback</h3>
 						<p>
-							Feedback helps us make the site better.
+							Feedback helps us improve the site over time.
 						</p>
 						<a href="mailto:info@baytownhub.org" class="button">Contact Us</a>
 					</div>
@@ -170,7 +168,7 @@
 
 		</main>
 
-		<!-- Footer used on all pages -->
+		<!-- footer (used on all pages) -->
 		<footer class="footer">
 			<div class="footer-content">
 
@@ -189,6 +187,7 @@
 						<li><a href="highlights.html">Highlights</a></li>
 						<li><a href="submit.html">Submit Resource</a></li>
 						<li><a href="about.html">About</a></li>
+                        <li><a href="references.html">References</a></li>
 					</ul>
 				</div>
 
@@ -201,10 +200,41 @@
 
 			</div>
 
-			<p class="copyright">
-				&copy; 2025–2026 Baytown Community Resource Hub
-			</p>
+			
 		</footer>
 
-	</body>
+<!-- emergency panel (included on all pages) -->
+    <div class="emergency-panel" id="emergencyPanel">
+        <button class="emergency-toggle" onclick="toggleEmergency()">
+            🚨 Emergency Resources
+        </button>
+
+        <div class="emergency-content" id="emergencyContent">
+            <h3>Need Help Now?</h3>
+            <div class="emergency-item">
+                <strong>Emergency Services:</strong> 911
+                <p>Fire, Police, Medical Emergency</p>
+            </div>
+            <div class="emergency-item">
+                <strong>Crisis Hotline:</strong> 988
+                <p>Mental health crisis support</p>
+            </div>
+            <div class="emergency-item">
+                <strong>Poison Control:</strong> (800) 222-1222
+                <p>24/7 poison emergency help</p>
+            </div>
+            <div class="emergency-item">
+                <strong>Domestic Violence:</strong> (800) 799-7233
+                <p>National hotline, 24/7 support</p>
+            </div>
+            <div class="emergency-item">
+                <strong>Suicide Prevention:</strong> 988
+                <p>Call or text, 24/7 confidential</p>
+            </div>
+            <button class="close-emergency" onclick="toggleEmergency()">Close ✕</button>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
 </html>
