Updated work log

--- a/about.html
+++ b/about.html
@@ -30,6 +30,7 @@
         <p>Helping connect Baytown residents with trustworthy local resources</p>
     </header>
 
+
     <main>
         <!-- Mission section -->
         <section class="section">
@@ -45,7 +46,7 @@
                     </p>
                     
                     <p>
-                        This hub puts everything in one place for our community's convenience so people don't have to scour for community resources.
+                        This hub puts everything in one place for our community's convenience so people don't have to scour the internet for community resources.
                     </p>
                 </div>
                 
@@ -117,6 +118,7 @@
                 </div>
             </div>
         </section>
+
 
         <!-- Get involved -->
         <section class="section light-bg">
@@ -204,6 +206,7 @@
         </div>
     </div>
 
+	
     <script src="script.js"></script>
 </body>
 </html>
