--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
         <section class="section center">
             <div class="three-column">
                 <div class="stat-card">
-                    <h2>20+</h2>
+                    <h2>Accessible</h2>
                     <p>Local Resources</p>
                 </div>
                 
                 <div class="stat-card">
-                    <h2>12</h2>
+                    <h2>Convenient</h2>
                     <p>Service Categories</p>
                 </div>
                 
@@ -137,6 +137,7 @@
             </div>
         </section>
 
+
         <!-- Call to action section -->
         <section class="section">
             <div class="cta-card">
@@ -149,6 +150,7 @@
             </div>
         </section>
     </main>
+
 
     <!-- Footer -->
     <footer class="footer">
@@ -179,6 +181,7 @@
         <p class="copyright">&copy; 2026 Baytown Community Resource Hub</p>
     </footer>
 
+	
     <!-- Emergency resources panel -->
     <div class="emergency-panel" id="emergencyPanel">
         <button class="emergency-toggle" onclick="toggleEmergency()">
